<resources>
    <string name="app_name">AwareWay</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Titre des élèments de la barre de menu de gauche -->
    <string name="title_home">Accueil</string>
    <string name="title_notes">Notes</string>
    <string name="title_map">Map</string>
    <string name="title_manage">Préférences</string>
    <string name="title_about">À propos</string>

    <!-- Liste des préférences de vue de l'application -->
    <string-array name="vue_array">
        <item>Carte</item>
        <item>Métro</item>
    </string-array>

    <!-- Titre des élèments de la barre de menu de droite -->
    <string name="action_a_propos">À propos de</string>
    <string name="action_options">Options</string>

    <!-- Requête serveur -->
    <string name="URL_GET_NODES">http://5.50.85.94:8080/PJI40_serveur/osm/getNodesFromRelation/%1$s</string>
    <string name="URL_GET_POIS">http://5.50.85.94:8080/PJI40_serveur/osm/getPoisFromRelation/%1$s</string>
    <string name="URL_GET_VALID_POIS">http://5.50.85.94:8080/PJI40_serveur/osm/getValidPoisFromRelation/%1$s</string>
    <string name="URL_GET_POIS_FILTRE">http://5.50.85.94:8080/PJI40_serveur/osm/getPoisFromRelation/%1$s/%2$s</string>
    <string name="URL_GET_RELATION_NAME">http://5.50.85.94:8080/PJI40_serveur/osm/getRelationsName/%1$s/%2$s</string>
    <string name="CREATE_POI">http://5.50.85.94:8080/PJI40_serveur/osm/ajouterPoi/%1$s/%2$s/%3$s/%4$s/%5$s/%6$s/%7$s/%8$s/%9$s/%10$s</string>

    <!-- SERVER_PATH -->
    <string name="WEB_PATH">http://5.50.85.94:8080/PJI40_serveur/</string>

    <!-- POIS fragment -->
    <string name="pois_fragment_main_text">Démarrer un trajet</string>
    <string name="pois_fragment_vue">Vue : </string>
    <string name="pois_fragment_map">Carte </string>
    <string name="pois_fragment_subway">Métro </string>
    <string name="pois_fragment_button_text">Démarrer </string>
    <string name="pois_fragment_seekbar_text">Niveau de découverte </string>
    <string name="pois_fragment_discover_explication">Le niveau de découverte définira le nombre
    de point d\'intérêt que vous rencontrerez sur la route</string>
    <string name="pois_fragment_first_value_list">Veuillez sélectionnez une ligne</string>
    <string name="pois_fragment_no_road_selected">Pas de ligne sélectionnée</string>
    <string name="pois_fragment_waiting_spinner">Recherche des lignes de trains proches de vous</string>
    <string name="pois_fragment_level_discovery">Niveau de découverte actuel : </string>


    <string name="title_activity_carte">CarteActivity</string>
    <string name="title_activity_edit_poi">EditPoiActivity</string>

    <!-- PoisCreator View -->
    <string name="visibilty_explanations">Appuyer sur le bouton "Début" une fois que
                                          voyez le POI et ensuite sur le bouton "Fin"
                                          une fois que vous ne le voyez plus.</string>
    <string name="poi_creator_not_enough_info">Vous n\'avez pas rempli assez d\'informations</string>
    <string name="poi_creator_poi_created">Votre poi a été créé avec succès !</string>
    <string name="poi_creator_error">Erreur lors de la création du Poi</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_out">Se deconnecter</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="error_invalid_email">Cette adresse mail est invalide</string>
    <string name="error_invalid_password">Mot de passe trop court</string>
    <string name="error_incorrect_password">Mot de passe incorrect</string>
    <string name="error_field_required">Ce champ est obligatoire</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Carte -->
    <string name="map_name">_____________</string>
    <string name="map_pk">--.-</string>
    <string name="map_distance">--</string>
    <string name="title_activity_test_info_po">TestInfoPo</string>
    <string name="nomPoi">Pas de nom</string>
    <string name="descPoi">Pas de description</string>
    <string name="webPoi">Pas de lien web</string>
    <string name="toMap">Retour à  la carte</string>

    <string name="title_text">Bienvenue sur Aware Way\nConnectez-vous ou enregistrez-vous</string>
    !-- Sign-in status messages -->
    <string name="signed_in_fmt">Connecté en temps que: %s</string>
    <string name="signed_in">Connecté</string>
    <string name="signing_in">Connexion…</string>
    <string name="signed_out">Déconnecté</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Chargement…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="login">Se connecter</string>
    <string name="sign_up">S\'enregistrer</string>
    <string name="sign_out">Déconnexion</string>
    <string name="disconnect">Déconnexion</string>
    <string name="account">Mon compte</string>
    <string name="tologin">Se connecter</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">1066303125006-hc13la9urgl0sflnkiptbkedhn9ts8ca.apps.googleusercontent.com</string>
    <string name="title_activity_user">Mon espace</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Prochainement.</string>

    <string name="user_account_connect_detail">Connecté avec %s</string>
</resources>
