<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="false"
            android:icon="@drawable/ic_train_black_24dp"
            android:title="@string/title_home" />

        <item
            android:id="@+id/nav_notes"
            android:checked="false"
            android:icon="@drawable/ic_announcement_black_24dp"
            android:title="@string/title_notes" />

        <item
            android:id="@+id/nav_map"
            android:checked="false"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/title_map" />

        <item
            android:id="@+id/nav_manage"
            android:checked="false"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/title_manage" />

        <item
            android:id="@+id/nav_about"
            android:checked="false"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/title_about" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_website"
                android:icon="@drawable/ic_menu_send"
                android:title="Go to web site" />
        </menu>
    </item>

</menu>
