<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_test_info_po" tools:context="com.pji.de.awareway.TestInfoPo">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:background="#322f2f">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nomPoi"
            android:text="@string/nomPoi"
            android:gravity="center"
            android:textSize="50dp"
            android:textColor="#ffffff"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/poiDescription"
            android:text="@string/descPoi"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="#ffffff"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/poiWeb"
            android:textSize="20dp"
            android:text="@string/webPoi"
            android:gravity="center"
            android:textColor="#ffffff"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:id="@+id/toMap"
            android:text="@string/toMap"/>
    </LinearLayout>

</RelativeLayout>
