<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:background="#e3dede">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

            android:textStyle="bold"
        android:text="@string/pois_fragment_main_text" android:textAlignment="center"
            android:paddingBottom="30dp"
            android:gravity="center"
        android:textSize="35dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pois_fragment_waiting_spinner"
                android:id="@+id/waiting_text"/>

            <ProgressBar
                android:layout_width="71dp"
                android:layout_height="match_parent"
                android:indeterminate="true"
                android:id="@+id/loading"/>
        </LinearLayout>


        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:id="@+id/spinner"
            android:layout_marginBottom="@dimen/activity_vertical_margin"

            />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#c5bfbf"
            android:paddingTop="@dimen/activity_vertical_margin"
            >

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
                android:textStyle="bold"
            android:text="@string/pois_fragment_seekbar_text"
            android:paddingTop="@dimen/activity_vertical_margin"
                />

            <SeekBar
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                android:paddingBottom="@dimen/activity_vertical_margin"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:id="@+id/textView"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/pois_fragment_discover_explication"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:id="@+id/levelSeekBar"
                android:textAlignment="center"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/pois_fragment_level_discovery"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnStart"
            android:text="@string/pois_fragment_button_text"
            />
    </RelativeLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Debug"
        android:id="@+id/debugCheckBox"
        android:checked="false" />


</LinearLayout>